--- a/style.css
+++ b/style.css
@@ -1,4 +1,54 @@
 h1{
-    font-family: Arial, sans-serif  Arial, sans-serif;
-    font-weight: bold;
+    color: white;
+    font-family: "Source Code Pro";
+    font-size: 50px;
 }
+body,
+html{
+    background-color: #0c1016;
+    display: flex;
+    font-size: 10px;
+    height: 100%;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+*{
+    box-sizing: border-box
+}
+.buttons {
+    position: absolute;
+    bottom: 5rem;
+    left: 5rem;
+    z-index: 5;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+.buttons button {
+    margin: 0 0 0.5rem 0;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+}
+.buttons button:focus {
+    outline: none;
+}
+svg {
+    width: 100%;
+    margin: 4rem;
+    fill: lightgrey;
+}
+svg g.show {
+    fill: red !important;
+}
+svg .cls-2 {
+    fill: #489dd7;
+}
+
+
+
