--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ h1{
 body,
 html{
     background-color: #0c1016;
-    display: flex;
     font-size: 10px;
     height: 100%;
     justify-content: center;
@@ -15,9 +14,11 @@ html{
     width: 100%;
 }
 
+/*
 *{
     box-sizing: border-box
 }
+ */
 .buttons {
     position: absolute;
     bottom: 5rem;
@@ -42,7 +43,7 @@ html{
     background-color: brown;
 }
 svg {
-    width: 100%;
+    height: 100%;
     margin: 4rem;
     fill: lightgrey;
 }
@@ -52,6 +53,51 @@ svg g.show {
 svg .cls-1 {
     fill: #489dd7;
 }
+*/
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
 
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.map svg{
+    height: 100%;
+    margin: 4rem;
+    fill: lightgrey;
+    width: 100%;
+
+}
+
+.map svg g.show{
+    fill: red !important;
+}
+
+.map svg .cls-1{
+    fill: #489dd7;
+}
 
 
