NEW CSS Console null error fix in setup() JQuery Slider mapped with date auto calculate todays date for max slider length and max date in datepicker HTML Hardcoded "Vergleiche"

--- a/style.css
+++ b/style.css
@@ -1,68 +1,28 @@
-h1{
-    color: white;
-    font-family: "Source Code Pro";
-    font-size: 50px;
-}
-body,
-html{
+body{
     background-color: #0c1016;
-    font-size: 10px;
-    height: 100%;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+}
+.row {
+    display: flex;
 }
 
-/*
-*{
-    box-sizing: border-box
+.column{
+    flex: 50%;
+    padding: 10px;
 }
- */
-.buttons {
-    position: absolute;
-    bottom: 5rem;
-    left: 5rem;
-    z-index: 5;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
+
+.topBar{
+    text-align: center;
+    color: white;
+    font-family: "Source Code Pro";
+    font-size: 22px;
 }
-.buttons button {
-    margin: 0 0 0.5rem 0;
-    padding: 1rem;
-    border-radius: 1rem;
-    background-color: white;
-    border: none;
-    cursor: pointer;
-}
-.buttons button:focus {
-    outline: none;
-}
-.buttons.selected {
-    background-color: brown;
-}
-/*
-svg {
-    height: 100%;
-    margin: 4rem;
-    fill: lightgrey;
-}
-svg g.show {
-    fill: red !important;
-}
-svg .cls-1 {
-    fill: #489dd7;
-}
-*/
 .slider {
     -webkit-appearance: none;
     width: 100%;
     height: 15px;
     border-radius: 5px;
-    background: #d3d3d3;
+    background: grey;
     outline: none;
-    opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
 }
@@ -73,32 +33,45 @@ svg .cls-1 {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: white;
     cursor: pointer;
 }
-
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
-
-.map svg{
-    height: 100%;
-    margin: 4rem;
-    fill: lightgrey;
-    width: 100%;
-
-}
-
-.map svg g.show{
-    fill: red !important;
-}
-
-.map svg .cls-1{
+.column svg .cls-1{
     fill: #489dd7;
 }
+.column svg{
+    margin-top: 50px;
+    width: 78%;
+}
 
+.column #datePicker{
+    margin-top: 50px;
+}
 
+#datepickerlabel{
+    color: white;
+    font-family: "Source Code Pro";
+}
+
+.column .relationButtons{
+    color: white;
+    font-family: "Source Code Pro";
+    margin-top: 30px;
+}
+.radiobutton{
+    margin-top: 10px;
+}
+.column #vergleich ,#vergleich1{
+    color: white;
+    font-family: "Source Code Pro";
+    margin-top: 100px;
+}
+.boxed {
+    border: 1px solid green ;
+    margin-right: 160px;
+    background-color: white;
+    color: black;
+    margin-top: 10px;
+    padding: 20px;
+    line-height: 35px;
+}
