--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
     padding: 20px;
     line-height: 35px;
     margin-bottom: 100px;
+    height: 155px;
 }
 table {
     border: 1px solid white;
