--- a/style.css
+++ b/style.css
@@ -114,3 +114,37 @@ td {
     font-family: "Source Code Pro";
     margin-right: 115px;
 }
+
+#mypopup {
+    width: 400px;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    font-size: 10pt;
+    background-color: white;
+    border-radius: 6px;
+    position: absolute;
+    display: none;
+}
+
+#mypopup::before {
+    content: "";
+    width: 12px;
+    height: 12px;
+    transform: rotate(45deg);
+    background-color: white;
+    position: absolute;
+    left: -6px;
+    top: 68px;
+}
+.tooltip {
+    text-decoration:none;
+    position:relative;
+}
+.tooltip span {
+    display:none;
+}
+.tooltip:hover span {
+    display:block;
+    position:fixed;
+    overflow:hidden;
+}
