added first try

--- a/style.css
+++ b/style.css
@@ -148,8 +148,12 @@ td {
     position:fixed;
     overflow:hidden;
 }
+
 #Dots:hover g{
     opacity:1;
 } #Dots g:hover{
     opacity:0.5;
-}
+} #Dots g:active{
+        opacity:0.5;
+    }
+
